Finalización vistas para segundo sprint

--- a/templates/CreateExercise.html
+++ b/templates/CreateExercise.html
@@ -63,8 +63,8 @@
             margin-top: 16px;
         }
         .input{
-            color: var(--white);
-            background-color: var(--blue);
+            color: var(--black);
+            background-color: var(--gray);
             border-radius: 12px;
             height: 36px;
             border: none;
@@ -75,14 +75,15 @@
             outline: none;
         }
         .input::placeholder{
-            color: var(--white);
+            color: var(--black);
         }
         .input-big{
             height: 256px;
         }
         .primary-button {
             font-size: var(--md);
-            background-color: var(--gold);
+            background-color: var(--blue);
+            color: var(--white);
             border-radius: 12px;
             border: none;
             height: 40px;
