--- a/templates/HomeMenuStudent.html
+++ b/templates/HomeMenuStudent.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
-        :root{
+ :root{
             --blue: #1F57A2;
             --white: #FFFFFF;
             --gray: #CFCDC8;
@@ -34,7 +34,8 @@
         }
         .nav-bar{
             width: 100vw;
-            height: 80px;
+            height: auto;
+            margin-top: 10px;
             background-color: var(--white);
             border-radius: 12px;
             margin-bottom: 16px;
@@ -52,13 +53,12 @@
             margin-left: 4px;
             margin-right: 16px;
             align-items: stretch;
+            width: 100%;
 
         }
 
         .logo-nav {
             width: 150px;
-            margin: 0 ;
-            margin-bottom: 12px;
             border-radius: 8px;
             grid-column-start: 1;
 
@@ -79,8 +79,8 @@
             margin-top: 16px;
         }
         .input{
-            color: var(--white);
-            background-color: var(--blue);
+            color: var(--black);
+            background-color: var(--gray);
             border-radius: 12px;
             border: none;
             height: 24px;
@@ -105,6 +105,7 @@
             margin-right: 16px;
             cursor: pointer;
         }
+    
 
 
 li{
@@ -140,7 +141,7 @@ li{
 .menu_teacher_right{
     grid-column-start: 2;
      display: flex;
-     flex-direction: column;
+     flex-direction: row;
     justify-content: center;
     width: auto;}
 .input{
@@ -157,16 +158,15 @@ li{
         }
 
         .primary-button-right {
-            font-size: var(--lg);
+            font-size: 20px;
             background-color: var(--white);
             border-radius: 12px;
             margin-bottom: 12px;
-            margin-top: 12px;
             margin-left: 8px;
             margin-right: 8px;
             border: none;
-            height: 128px;
-            width: 96%;
+            height: 64px;
+            width: 200px;
             color: var(--blue);
             cursor: pointer;
 
@@ -178,17 +178,16 @@ li{
             border-radius: 12px;
             border: none;
             height: 32px;
+            width: 48px;
             color: var(--white);
             margin-left: 16px;
             margin-right: 16px;
             margin-bottom: 16px;
-            margin-top: 8px;
             cursor: pointer;
-
         }
         .form-add {
     display: flex;
-    flex-direction: column;
+    flex-direction:row;
         }
         .log_out{
             width: 48px;
@@ -196,7 +195,7 @@ li{
             grid-column-start: 2;
             align-self: center;
         }
-
+    
     .log_out-button{
         background: var(--white);
         border: none;
@@ -206,9 +205,9 @@ li{
     .out{
         display:flex;
         justify-content: center;
-        align-items: center;
+        align-items: center; 
         margin-right: 12px;
-
+        
     }
     .exit{
         width: 48px;
@@ -216,6 +215,52 @@ li{
         justify-self: center;
         cursor: pointer;
     }
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-content {
+    background-color: white;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
+.notification{
+            color: var(--blue);
+            background-color: white;
+            font-size: var(--lg);
+            display: flex;
+            justify-content: center;
+            border-radius: 16px;
+            margin: 12px 12px 0 4px;
+            justify-self: center;
+
+
+        }
+.gen-code{
+    width: auto;
+}
+
     </style>
 </head>
 <body>
@@ -259,12 +304,13 @@ li{
                    <input type="hidden" name="CourseName" value="{{ CourseName }}">
                    <button  class= "primary-button-right" type="submit">Ranking</button>
                </form>
-               <div class="menu-item">
+            </div>
+            <div class="menu-item">
                    <form action="/DeliveriesStudent">
                        <input type="hidden" name="CourseName" value="{{ CourseName }}">
                        <button  class= "primary-button-right" type="submit">Entregas</button>
                    </form>
-               </div>
+            </div>
        </div>
    </div>
 </div>
