--- a/templates/HomeMenu_forActivityStudent.html
+++ b/templates/HomeMenu_forActivityStudent.html
@@ -26,7 +26,7 @@
         }
         .container-down {
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 20% 80%;
     grid-template-rows: auto;
 }
         .full-container{
@@ -45,16 +45,19 @@
             align-content: center;
         }
         .menu_teacher_left {
-            grid-column-start: 1;
-            background-color: var(--white);
-            display: flex;
-            flex-direction: column;
-            border-radius: 12px;
-            margin-left: 4px;
-            margin-right: 16px;
-            align-items: stretch;
+    grid-column-start: 1;
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    margin-left: 0px;
+    max-width: 500px;
+    margin-right: 16px;
+    align-items: stretch;
+    max-height: 500px; /* Cambia este valor según tu preferencia */
+    overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
+}
 
-        }
 
         .logo-nav {
             width: 150px;
@@ -139,11 +142,13 @@ li{
     justify-self: center;
 }
 .menu_teacher_right{
+    margin-left: 12px;
     grid-column-start: 2;
      display: flex;
      flex-direction: row;
     justify-content: center;
-    width: auto;}
+    width: auto;
+}
 .input{
             color: var(--blue);
             background-color: var(--gray);
@@ -170,6 +175,7 @@ li{
             width: 244px;
             color: var(--blue);
             cursor: pointer;
+            margin-left: 12px;
         }
         .primary-button-exercise{
             font-size: var(--g);
@@ -225,9 +231,12 @@ li{
 
     }
     .buttons-container{
+        margin-left: 0px;
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: auto;
+        align-items: flex-start;
 
 
     }
@@ -244,8 +253,8 @@ li{
 
     .menu-exercises{
         height: auto;
-        width: 760px;
-        margin: 8px 0 0 8px;
+        width: 100%;
+        margin:0 0 0 8px;
     }
     .exit{
         width: 48px;
@@ -315,7 +324,9 @@ li{
                             <li>
                                 <img src="{{ url_for('static', filename='code.png') }}" class="code">
                                     <span>{{ exercise_dict['task'][0] }}</span>
-                                <a href="{{ url_for('goExercise', Menu=loop.index0, nameExercise=exercise_dict['task'][0], CourseName=CourseName, nameActivity=nameActivity) }}"> go  </a>
+                                <a href="{{ url_for('goExercise', Menu=loop.index0, nameExercise=exercise_dict['task'][0], CourseName=CourseName, nameActivity=nameActivity) }}">
+                                    <img src="{{ url_for('static', filename='go.png') }}" class="mini-icon go">
+                                 </a>
 
                             </li>
                             {% endfor %}
