--- a/templates/RankingStudent.html
+++ b/templates/RankingStudent.html
@@ -17,6 +17,7 @@
             --sm: 14px;
             --md: 16px;
             --lg: 24px;
+            --g: 36px;
         }
         body {
             background-color: var(--blue);
@@ -26,7 +27,7 @@
         }
         .container-down {
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 20% 80%;
     grid-template-rows: auto;
 }
         .full-container{
@@ -45,16 +46,19 @@
             align-content: center;
         }
         .menu_teacher_left {
-            grid-column-start: 1;
-            background-color: var(--white);
-            display: flex;
-            flex-direction: column;
-            border-radius: 12px;
-            margin-left: 4px;
-            margin-right: 16px;
-            align-items: stretch;
+    grid-column-start: 1;
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    margin-left: 0px;
+    max-width: 500px;
+    margin-right: 16px;
+    align-items: stretch;
+    max-height: 500px; /* Cambia este valor según tu preferencia */
+    overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
+}
 
-        }
 
         .logo-nav {
             width: 150px;
@@ -70,6 +74,12 @@
            margin-bottom: 16px;
            margin-left: 12px;
            text-align: left;
+        }
+        .title-ranking{
+           font-size: var(--lg);
+           color: var(--white);
+           text-align: left;
+           margin-bottom: 16px;
         }
         .label{
             margin-left: 16px;
@@ -115,6 +125,7 @@ li{
     align-items: center;
     margin-bottom: 16px;
 
+
 }
 .mini-icon{
     width: 32px;
@@ -137,13 +148,14 @@ li{
     margin-right: 12px;
     justify-self: center;
 }
-
 .menu_teacher_right{
+    margin-left: 12px;
     grid-column-start: 2;
      display: flex;
      flex-direction: column;
     justify-content: center;
-    width: auto;}
+    width: auto;
+}
 .input{
             color: var(--blue);
             background-color: var(--gray);
@@ -161,17 +173,30 @@ li{
             font-size: var(--lg);
             background-color: var(--white);
             border-radius: 12px;
-            margin-bottom: 12px;
+            margin-bottom: 8px;
+            margin-top: 4px;
+            margin-left: 8px;
+            margin-right: 8px;
+            border: none;
+            height: 80px;
+            width: 244px;
+            color: var(--blue);
+            cursor: pointer;
+            margin-left: 12px;
+        }
+        .primary-button-exercise{
+            font-size: var(--g);
+            background-color: var(--gold);
+            border-radius: 12px;
+            margin-bottom: 8px;
             margin-top: 12px;
             margin-left: 8px;
             margin-right: 8px;
             border: none;
             height: 128px;
-            width: 96%;
+            width: 760px;
             color: var(--blue);
             cursor: pointer;
-
-
         }
         .primary-button-teacher{
             font-size: var(--lg);
@@ -188,6 +213,7 @@ li{
 
         }
         .form-add {
+        justify-self: flex-end;
     display: flex;
     flex-direction: column;
         }
@@ -211,12 +237,86 @@ li{
         margin-right: 12px;
 
     }
+    .buttons-container{
+        margin-left: 0px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: auto;
+        align-items: flex-start;
+    }
+    .container-little-buttons{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    a{text-decoration: none;
+    color: var(--black);
+    font-size: var(--lg);}
+
+    .menu-exercises{
+        height: auto;
+        width: 100%;
+        margin:0 0 0 8px;
+    }
     .exit{
         width: 48px;
         height: 48px;
         justify-self: center;
         cursor: pointer;
     }
+    /* Agrega estilos para la tabla con class "table-ranking" */
+.table-ranking {
+    width: 60%;
+    border-collapse: collapse;
+    background-color: var(--white);
+    border-radius: 24px;
+    margin-top: 8px;
+}
+
+.table-ranking th {
+    background-color: var(--blue);
+    color: var(--white);
+    font-weight: bold;
+    padding: 10px;
+    text-align: left;
+}
+
+
+.table-ranking th, .table-ranking td {
+    border: 1px solid var(--gray);
+    padding: 10px;
+}
+
+
+
+
+.table-ranking tr:nth-child(odd) {
+    background-color: var(--gray);
+}
+
+.table-ranking tr:nth-child(even) {
+    background-color: var(--white);
+}
+
+.table-ranking td {
+    color: var(--black);
+}
+
+
+/* Estilos para las filas impares de la tabla */
+.table-ranking tr:nth-child(odd) td {
+    background-color: var(--gray);
+}
+
+/* Estilos para las filas pares de la tabla */
+.table-ranking tr:nth-child(even) td {
+    background-color: var(--white);
+}
+
+
     </style>
 </head>
 <body>
@@ -249,20 +349,29 @@ li{
                {% endfor %}
        </div>
        <div class="menu_teacher_right">
-           <div class="menu-item">
-               <form action="/HomeMenuStudent">
-                   <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                   <button  class= "primary-button-right" type="submit">Tematicas</button>
-               </form>
-           </div>
-           <div class="menu-item">
-               <form action="/RankingViewStudent">
-                   <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                   <button  class= "primary-button-right" type="submit">Ranking</button>
-               </form>
-           </div>
-           <h1>Ranking de Estudiantes</h1>
-    <table>
+        <div class="buttons-container">
+            <div class="menu-item">
+                <form action="/HomeMenuStudent">
+                    <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                    <button  class= "primary-button-right" type="submit">Tematicas</button>
+                </form>
+            </div>
+            <div class="menu-item">
+                <form action="/RankingViewStudent">
+                    <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                    <button  class= "primary-button-right" type="submit">Ranking</button>
+                </form>
+            </div>
+            <div class="menu-item">
+             <form action="/DeliveriesStudent">
+                 <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                 <button  class= "primary-button-right" type="submit">Entregas</button>
+             </form>
+            </div>
+         </div>
+        <div class="ranking-frame">
+           <h1 class="title-ranking">Ranking de Estudiantes</h1>
+    <table class="table-ranking">
         <tr>
             <th>Nombre y Apellido</th>
             <th>    Puntaje</th>
@@ -274,7 +383,7 @@ li{
             </tr>
         {% endfor %}
     </table>
-   </div>
+    </div>
 </div>
 </div>
 </body>
