--- a/templates/SelectStudentQualify.html
+++ b/templates/SelectStudentQualify.html
@@ -210,7 +210,7 @@ li{
             grid-column-start: 2;
             align-self: center;
         }
-    
+
     .log_out-button{
         background: var(--white);
         border: none;
@@ -220,9 +220,9 @@ li{
     .out{
         display:flex;
         justify-content: center;
-        align-items: center; 
+        align-items: center;
         margin-right: 12px;
-        
+
     }
     .buttons-container{
         display: flex;
@@ -253,7 +253,7 @@ li{
         justify-self: center;
         cursor: pointer;
     }
-    
+
     </style>
 </head>
 <body>
@@ -297,7 +297,7 @@ li{
 
             <div class="menu_teacher_right">
                 <div class="buttons-container">
-                    <div class="container-little-buttons"> 
+                    <div class="container-little-buttons">
                         <div class="menu-item">
                             <form action="/HomeMenuTeacher">
                                 <input type="hidden" name="CourseName" value="{{ CourseName }}">
@@ -311,43 +311,24 @@ li{
                             </form>
                         </div>
                     </div>
-                    <div class="menu-item">
-                        <form action="/CreateExerciseView" method="GET">
-                            <input type="hidden" name="nameActivity" value="{{ nameActivity }}">
-                            <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                            <button  class= "primary-button-exercise" type="submit">Crear Ejercicio</button>
-                        </form>
-                    </div>
-                    
+
                     <div class="menu_teacher_left menu-exercises">
-                        <h2 class = "title">Ejercicios : </h2>
+                        <h2 class = "title">Estudiantes que han entregado el ejercicio : </h2>
                         <ul>
-                            {% for exercise_dict in Exercises %}
+                            {% for StudentAndDelivery in listOfStudentAndDelivery %}
                             <li>
                                 <img src="{{ url_for('static', filename='code.png') }}" class="code">
-                                    <span>{{ exercise_dict['task'][0] }}</span>
+                                    <span>{{ StudentAndDelivery[0].firstName }}</span>
 
-                                <a href="{{ url_for('SelectStudentQualify', Menu=loop.index0, exercise=exercise_dict['task'][0], CourseName=CourseName, nameActivity=nameActivity )}}">revisar -- </a>
+                                <a href="{{ url_for('seeDelivery',Menu=loop.index0, code=StudentAndDelivery[1].code, detail=StudentAndDelivery[1].detail, CourseName=CourseName, nameActivity=nameActivity, email=StudentAndDelivery[0].email, nameExercise=StudentAndDelivery[1].nameExercise)}}"> Ver Entrega </a>
 
-                                <a href="{{ url_for('editExercise', Menu=loop.index0,exercise=exercise_dict['task'][0], CourseName=CourseName, nameActivity=nameActivity) }}"> editar --  </a>
-
-                                <a href="{{ url_for('deleteExercise', Menu=loop.index0, CourseName=CourseName, nameActivity=nameActivity)}}">Borrar</a>
-    
                             </li>
                             {% endfor %}
                         </ul>
                     </div>
-                    
                 </div>
-                
-                
             </div>
         </div>
-            
-            
-              
-               
     </div>
-
 </body>
 </html>
