--- a/templates/seeDelivery.html
+++ b/templates/seeDelivery.html
@@ -210,7 +210,7 @@ li{
             grid-column-start: 2;
             align-self: center;
         }
-    
+
     .log_out-button{
         background: var(--white);
         border: none;
@@ -220,9 +220,9 @@ li{
     .out{
         display:flex;
         justify-content: center;
-        align-items: center; 
+        align-items: center;
         margin-right: 12px;
-        
+
     }
     .buttons-container{
         display: flex;
@@ -253,7 +253,7 @@ li{
         justify-self: center;
         cursor: pointer;
     }
-    
+
     </style>
 </head>
 <body>
@@ -297,7 +297,7 @@ li{
 
             <div class="menu_teacher_right">
                 <div class="buttons-container">
-                    <div class="container-little-buttons"> 
+                    <div class="container-little-buttons">
                         <div class="menu-item">
                             <form action="/HomeMenuTeacher">
                                 <input type="hidden" name="CourseName" value="{{ CourseName }}">
@@ -311,43 +311,44 @@ li{
                             </form>
                         </div>
                     </div>
-                    <div class="menu-item">
-                        <form action="/CreateExerciseView" method="GET">
-                            <input type="hidden" name="nameActivity" value="{{ nameActivity }}">
+
+                    <div class="menu_teacher_left menu-exercises">
+                            <h2>Codigo </h2>
+                        <form action="/executeTeacher">
+                            <textarea rows="10" cols="30" class="input" name="code"  >{{code}}</textarea>
+
                             <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                            <button  class= "primary-button-exercise" type="submit">Crear Ejercicio</button>
+                            <input type="hidden" name="code" value="{{ code }}">
+                            <input type="hidden" name="detail" value="{{ detail }}">
+                            <button  class= "primary-button-right" type="submit">Ejecutar Codigo</button>
+                            <div class="menu_teacher_left">
+                                        <h2 class="title">Resultado:</h2>
+                                            {% if compiledCode %}
+                                            <pre style="text-align: left; white-space: pre-wrap;">
+                                                {% for line in compiledCode.split('\n') %}
+                                                {{ line }}
+                                                {% endfor %}
+                                            </pre>
+                                            {% endif %}
+                        </div>
+                            <h2>Detalles del Estudiante</h2>
+                            <textarea rows="10" cols="30" class="input" name="detail">{{detail}}</textarea>
+                        </form>
+
+
+                        <h2>Calificación</h2>
+
+                        <form class="form-add" action="{{ url_for('deliverNote', Menu=Menu, CourseName=CourseName,nameActivity=nameActivity, nameExercise=nameExercise, code=code,email=email,detail=detail) }}" method="post">
+                            <h3>Retroalimentación</h3>
+                            <input type="text" name="feedback"  maxlength="60" placeholder="Dale una retroalimentación a tu estudiante!" required>
+                            <h3>Nota</h3>
+                            <input type="text" name="note"  maxlength="20" placeholder="nota" required>
+                            <button type="submit" > Enviar Calificación </button>
                         </form>
                     </div>
-                    
-                    <div class="menu_teacher_left menu-exercises">
-                        <h2 class = "title">Ejercicios : </h2>
-                        <ul>
-                            {% for exercise_dict in Exercises %}
-                            <li>
-                                <img src="{{ url_for('static', filename='code.png') }}" class="code">
-                                    <span>{{ exercise_dict['task'][0] }}</span>
-
-                                <a href="{{ url_for('SelectStudentQualify', Menu=loop.index0, exercise=exercise_dict['task'][0], CourseName=CourseName, nameActivity=nameActivity )}}">revisar -- </a>
-
-                                <a href="{{ url_for('editExercise', Menu=loop.index0,exercise=exercise_dict['task'][0], CourseName=CourseName, nameActivity=nameActivity) }}"> editar --  </a>
-
-                                <a href="{{ url_for('deleteExercise', Menu=loop.index0, CourseName=CourseName, nameActivity=nameActivity)}}">Borrar</a>
-    
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                    
                 </div>
-                
-                
             </div>
         </div>
-            
-            
-              
-               
     </div>
-
 </body>
 </html>
