--- a/templates/HomeMenu_forActivityStudent.html
+++ b/templates/HomeMenu_forActivityStudent.html
@@ -299,18 +299,21 @@ li{
                         <div class="menu-item">
                             <form action="/HomeMenuStudent">
                                 <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                                <input type="hidden" name="email" value="{{ email }}">
                                 <button  class= "primary-button-right" type="submit">Tematicas</button>
                             </form>
                         </div>
                         <div class="menu-item">
                             <form action="/RankingViewStudent">
                                 <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                                <input type="hidden" name="email" value="{{ email }}">
                                 <button  class= "primary-button-right" type="submit">Ranking</button>
                             </form>
                         </div>
                         <div class="menu-item">
                             <form action="/DeliveriesStudent">
                                 <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                                <input type="hidden" name="email" value="{{ email }}">
                                 <button  class= "primary-button-right" type="submit">Entregas</button>
                             </form>
                         </div>
