--- a/templates/HomeMenuStudent.html
+++ b/templates/HomeMenuStudent.html
@@ -18,7 +18,7 @@
             --lg: 24px;
         }
         body {
-            background-color: var(--blue);
+            background-color: var(--blue) ;
             font-family: 'Space Grotesk', sans-serif;
             margin: 0;
             display: flex;
@@ -266,21 +266,35 @@ li{
 </head>
 <body>
 <div class="full-container">
+
 <div class="nav-bar"><img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo-nav">
 
 
     <form class="out" action="/sign_off">
+
         <a class="log_out">
             <button type="submit" class="log_out-button">
                 <img src="{{ url_for('static', filename='log_out.png') }}"  alt="log_out" class="exit">
+
             </button>
         </a>
         </form>
 
 </div>
+
 <div class="container-down">
     <div class="menu_teacher_left">
-           <h2 class = "title">Temáticas : </h2>
+           <div class="menu-item">
+               <form action="/HomeMenuStudent">
+                   <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                   <input type="hidden" name="email" value="{{ email }}">
+                   <button  class= "primary-button-right" type="submit"><h3>Tematicas:</h3> </button>
+               </form>
+
+           </div>
+
+
+
                {% for todo in Actividades %}
                <li>
                    <img src="{{ url_for('static', filename='book.png') }}" class="book">
@@ -292,25 +306,17 @@ li{
 
                </li>
                {% endfor %}
-       </div>
-       <div class="menu_teacher_right">
-           <div class="menu-item">
-               <form action="/HomeMenuStudent">
-                   <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                   <input type="hidden" name="email" value="{{ email }}">
-                   <button  class= "primary-button-right" type="submit">Tematicas</button>
-               </form>
-           </div>
            <div class="menu-item">
                <form action="/RankingViewStudent">
                    <input type="hidden" name="CourseName" value="{{ CourseName }}">
                    <input type="hidden" name="email" value="{{ email }}">
-                   <button  class= "primary-button-right" type="submit">Ranking</button>
+                   <button  class= "primary-button-right" type="submit"><h3>Ranking</h3></button>
                </form>
             </div>
        </div>
+
    </div>
-</div>
+
 </div>
 </body>
 </html>
