--- a/templates/SelectStudentQualify.html
+++ b/templates/SelectStudentQualify.html
@@ -44,7 +44,7 @@
             grid-template-rows: auto;
             align-content: center;
         }
-        .menu_teacher_left {
+       .menu_teacher_left {
             grid-column-start: 1;
             background-color: var(--white);
             display: flex;
@@ -53,6 +53,7 @@
             margin-left: 4px;
             margin-right: 16px;
             align-items: stretch;
+            width: 50%;
 
         }
 
@@ -320,7 +321,7 @@ li{
                                 <img src="{{ url_for('static', filename='code.png') }}" class="code">
                                     <span>{{ StudentAndDelivery[0].firstName }}</span>
 
-                                <a href="{{ url_for('seeDelivery',Menu=loop.index0, code=StudentAndDelivery[1].code, detail=StudentAndDelivery[1].detail, CourseName=CourseName, nameActivity=nameActivity, email=StudentAndDelivery[0].email, nameExercise=StudentAndDelivery[1].nameExercise)}}"> Ver Entrega </a>
+                                <a href="{{ url_for('seeDelivery',Menu=loop.index0, code=StudentAndDelivery[1].code, detail=StudentAndDelivery[1].detail, CourseName=CourseName, nameActivity=nameActivity,email=StudentAndDelivery[0].email, nameExercise=StudentAndDelivery[1].nameExercise ) }}"> Ver Entrega </a>
 
                             </li>
                             {% endfor %}
